--- a/angular.json
+++ b/angular.json
@@ -119,8 +119,13 @@
               "devServerTarget": "ingresosEgresoApp:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {}
         }
       }
-    }},
+    }
+  },
   "defaultProject": "ingresosEgresoApp"
 }
