--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "@angular/common": "~8.2.8",
     "@angular/compiler": "~8.2.8",
     "@angular/core": "~8.2.8",
+    "@angular/fire": "^5.4.2",
     "@angular/forms": "~8.2.8",
     "@angular/platform-browser": "~8.2.8",
     "@angular/platform-browser-dynamic": "~8.2.8",
     "@angular/router": "~8.2.8",
     "bootstrap": "^4.4.1",
+    "firebase": ">= 5.5.7 <8",
     "rxjs": "~6.4.0",
+    "sweetalert2": "^9.10.10",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
@@ -43,6 +46,11 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
-    "typescript": "~3.5.3"
+    "typescript": "~3.5.3",
+    "@angular-devkit/architect": "<0.900 || ^0.900.0-0 || ^9.0.0-0",
+    "firebase-tools": "^7.12.0",
+    "fuzzy": "^0.1.3",
+    "inquirer": "^6.2.2",
+    "inquirer-autocomplete-prompt": "^1.0.1"
   }
 }
