Create components of 'ingreso-egreso', details and register

--- a/package.json
+++ b/package.json
@@ -20,8 +20,12 @@
     "@angular/platform-browser": "~8.2.8",
     "@angular/platform-browser-dynamic": "~8.2.8",
     "@angular/router": "~8.2.8",
+    "@ngrx/store": "^9.1.0",
+    "@ngrx/store-devtools": "^9.1.0",
     "bootstrap": "^4.4.1",
+    "chart.js": "^2.9.3",
     "firebase": ">= 5.5.7 <8",
+    "ng2-charts": "^2.3.0",
     "rxjs": "~6.4.0",
     "sweetalert2": "^9.10.10",
     "tslib": "^1.10.0",
